data/derived/fa15/progs/unify/prog2011.ml.out
Characters 99-100:
  (0, a * 10 + num1 + num2) in
      ^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
